# quark

./: README.md  index.html  perf.md  plan.md  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: docs_github_pages.yml
articles/: getting-started.html  reproject-l1-equirectangular.html  reproject-to-polar.html
docs/: _quarto.yml  index.qmd
docs/_extensions/hygeos-docs/: _extension.yml
docs/_extensions/hygeos-docs/css/: hygeos-docs.css
docs/articles/: getting-started.qmd  reproject-l1-equirectangular.qmd  reproject-to-polar.qmd
quark/: __init__.py  accumulate.py  aggregate.py  supersampling.py  utils.py
quark/projection/: __init__.py  equirectangular.py  lambertazimutal.py  polar.py
quartz/: accumulate.py  aggregate.py  supersampling.py
quartz/projection/: equirectangular.py  polar.py
reference/: accumulate.html  aggregate.html  index.html  projection.EquiRectangular.html  projection.LambertAzimutal.html  projection.PolarNorth.html  projection.PolarSouth.html  supersampling.html
scripts/: compare_accumulators.py  compare_kahan.py  compare_reproj.py  geoutils_reproj_lst.py  reproj_lst.py  reproj_par_polar.py
site_libs/bootstrap/: bootstrap-56cd821b5626d7d4691afdc80bf6577c.min.css  bootstrap-dark-93aa7c785f3754f85ba3eb74c5c8b468.min.css
tests/: test_aggregate.py  test_azimuthal_equidistant.py  test_equirectangular.py  test_supersampling.py
